5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1836_2602.log
== SUBMITION (2019-06-25 13:12:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("Digitte: ")))

al = array([[2,1,4],[1,2,0],[2,3,2]]

vi = dot(inv(al),vet.T)

print("estafilococo: ", round(preco[0], 1))
print("salmonela: ", round(preco[1], 1))
print("coli: ", round(preco[2], 1))

# Imprime nome da fruta mais cara
if vi[0] == min(vi):
    print("estafilococo")
elif vi[1] == min(preco):
    print("salmonela")
else:
    print("coli")

-- EXECUTION TIME:
0.648376
-- ERROR:
  File "/home/codebench/codes/1836/2602/main.py", line 8
    vi = dot(inv(al),vet.T)
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 13:13:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("Digitte: ")))

al = array([[2,1,4],[1,2,0],[2,3,2]]

vi = dot(inv(al),vet.T)

print("estafilococo: ", round(vi[0], 1))
print("salmonela: ", round(vi[1], 1))
print("coli: ", round(vi[2], 1))

# Imprime nome da fruta mais cara
if vi[0] == min(vi):
    print("estafilococo")
elif vi[1] == min(preco):
    print("salmonela")
else:
    print("coli")

-- EXECUTION TIME:
0.613706
-- ERROR:
  File "/home/codebench/codes/1836/2602/main.py", line 8
    vi = dot(inv(al),vet.T)
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 13:13:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("Digitte: ")))

al = array([[2,1,4],[1,2,0],[2,3,2]]

vi = dot(inv(al),vet.T)

print("estafilococo: ", round(vi[0], 1))
print("salmonela: ", round(vi[1], 1))
print("coli: ", round(vi[2], 1))

# Imprime nome da fruta mais cara
if vi[0] == min(vi):
    print("estafilococo")
elif vi[1] == min(preco):
    print("salmonela")
else:
    print("coli")

-- ERROR:
File "XXXX", line 8
    vi = dot(inv(al),vet.T)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 13:13:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("Digitte: ")))

al = array([[2,1,4],[1,2,0],[2,3,2]])

vi = dot(inv(al),vet.T)

print("estafilococo: ", round(vi[0], 1))
print("salmonela: ", round(vi[1], 1))
print("coli: ", round(vi[2], 1))

# Imprime nome da fruta mais cara
if vi[0] == min(vi):
    print("estafilococo")
elif vi[1] == min(preco):
    print("salmonela")
else:
    print("coli")

-- EXECUTION TIME:
1.07867
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 17, in <module>
    elif vi[1] == min(preco):
NameError: name 'preco' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 13:13:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("Digitte: ")))

al = array([[2,1,4],[1,2,0],[2,3,2]])

vi = dot(inv(al),vet.T)

print("estafilococo: ", round(vi[0], 1))
print("salmonela: ", round(vi[1], 1))
print("coli: ", round(vi[2], 1))

# Imprime nome da fruta mais cara
if vi[0] == min(vi):
    print("estafilococo")
elif vi[1] == min(preco):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 13:14:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("Digitte: ")))

al = array([[2,1,4],[1,2,0],[2,3,2]])

vi = dot(inv(al),vet.T)

print("estafilococo: ", round(vi[0], 1))
print("salmonela: ", round(vi[1], 1))
print("coli: ", round(vi[2], 1))

# Imprime nome da fruta mais cara
if vi[0] == min(vi):
    print("estafilococo")
elif vi[1] == min(vi):
    print("salmonela")
else:
    print("coli")

-- EXECUTION TIME:
1.27604
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
